# FamilyFinances

./: CMakeLists.txt  FamilyFinances.qss  README.md  familyfinances.db  main.cpp
bank/: CMakeLists.txt
bank/include/: Account.h  Bank.h  Money.h  OverdraftException.h  Transaction.h
bank/src/: Account.cpp  Bank.cpp  BankApp.code-workspace  Money.cpp  OverdraftException.cpp  Transaction.cpp
resources/: admin.cfg  resources.qrc  user.cfg  user_accounts.cfg
tests/: CMakeLists.txt
ui/: CMakeLists.txt
ui/include/: AccountManager.h  FamilyFinances.h  LoginPage.h  TransactionManager.h  UISetup.h
ui/src/: AccountManager.cpp  FamilyFinances.cpp  LoginPage.cpp  TransactionManager.cpp  UISetup.cpp
